# hexichor

./: .gitignore  Cargo.toml  README.md
src/: api.rs  auth.rs  errors.rs  main.rs  manager.rs  messages.rs
src/dto/: loginrequest.rs  mod.rs  statusreply.rs
