[package]
name = "hexichor"
version = "0.0.1"
edition = "2021"
license = "ACSL"
repository = "https://github.com/Lymkwi/hexichor.git"
keywords = ["cli", "api", "web"]
categories = ["command-line-utilities"]
description = "A web-based URL status fetcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel="1.6.1"
clap = "3.2.8"
reqwest = { version="0.11.11", features=["json"] }
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version="1.19.2", features=["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
uuid = { version = "1.1.2", features=["v4"] }
warp = "0.3.2"
